--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -45,6 +45,12 @@
     justify-content: flex-start;
   }
 
+  .brand-logo {
+    width: 36px;
+    height: 36px;
+    flex-basis: 36px;
+  }
+
   .header-actions {
     justify-content: flex-start;
     flex-wrap: wrap;
